[gd_scene load_steps=26 format=3 uid="uid://dvlremsb1ol6r"]

[ext_resource type="Script" uid="uid://oqgkrky3gyct" path="res://assets/scripts/player/player_controller.gd" id="1_ron7s"]
[ext_resource type="Material" uid="uid://bw7qseeojktwo" path="res://assets/materials/player.tres" id="2_5165d"]
[ext_resource type="Script" uid="uid://dxkokv6u80rvp" path="res://assets/scripts/player/components/camera_controller.gd" id="3_st4y8"]
[ext_resource type="PackedScene" uid="uid://dm8i2vnkdr8jd" path="res://export/hands.glb" id="4_d0gre"]
[ext_resource type="Script" uid="uid://d0w7um1tewcsg" path="res://assets/scripts/player/components/mouse_capture.gd" id="5_3s0e8"]
[ext_resource type="Script" uid="uid://cofbfrhcbvkhp" path="res://assets/scripts/ui/reticle.gd" id="6_d4080"]
[ext_resource type="Theme" uid="uid://s8vo0mfwe726" path="res://scenes/ui/themes/debug.tres" id="7_xno87"]
[ext_resource type="Script" uid="uid://bx7tbiemm08" path="res://assets/scripts/debug/debug.gd" id="8_x3riy"]
[ext_resource type="Script" uid="uid://b7sekpub2dhyj" path="res://assets/scripts/old/idle_player_state_old.gd" id="9_jwvuw"]
[ext_resource type="Script" uid="uid://do7qc2dpumiwf" path="res://assets/scripts/old/walking_player_state_old.gd" id="10_nbh2x"]
[ext_resource type="Script" uid="uid://cihkemoanrfaa" path="res://assets/scripts/old/sprinting_player_state_old.gd" id="11_skw14"]
[ext_resource type="Script" uid="uid://c4ruq33uhx3wo" path="res://assets/scripts/old/crouching_player_state_old.gd" id="12_pgrel"]
[ext_resource type="Script" uid="uid://d300y0tbrc2p0" path="res://assets/scripts/old/jumping_player_state_old.gd" id="13_fdr06"]
[ext_resource type="Script" uid="uid://cugakcxh0k3s5" path="res://assets/scripts/old/sliding_player_state_old.gd" id="14_03s5g"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_j0767"]
material = ExtResource("2_5165d")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_b1twt"]

[sub_resource type="Animation" id="Animation_xc2pf"]
length = 0.001
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StandingCollision:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StandingCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CameraController/Camera3D:fov")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [100.0]
}

[sub_resource type="Animation" id="Animation_ca8e7"]
resource_name = "crouching"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StandingCollision:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StandingCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.75, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1, 0)]
}

[sub_resource type="Animation" id="Animation_5w0k0"]
resource_name = "jump_end"

[sub_resource type="Animation" id="Animation_l8yvu"]
resource_name = "jump_start"

[sub_resource type="Animation" id="Animation_uovkr"]
resource_name = "sliding"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StandingCollision:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StandingCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.75, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CameraController:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 3, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ShapeCast3D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlayerStateMachine/SlidingPlayerState:SPEED")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6.0, 4.0]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PlayerStateMachine/SlidingPlayerState")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finish"
}]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CameraController/Camera3D:fov")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.3, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [100.0, 75.0, 100.0]
}

[sub_resource type="Animation" id="Animation_bneyr"]
resource_name = "sprinting"

[sub_resource type="Animation" id="Animation_jmoha"]
resource_name = "walking"
length = 2.0
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t6fw5"]
_data = {
&"RESET": SubResource("Animation_xc2pf"),
&"crouching": SubResource("Animation_ca8e7"),
&"jump_end": SubResource("Animation_5w0k0"),
&"jump_start": SubResource("Animation_l8yvu"),
&"sliding": SubResource("Animation_uovkr"),
&"sprinting": SubResource("Animation_bneyr"),
&"walking": SubResource("Animation_jmoha")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_ca8e7"]

[node name="PlayerController" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_ron7s")

[node name="PlaceholderMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_j0767")
skeleton = NodePath("../StandingCollision")

[node name="StandingCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_b1twt")

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
script = ExtResource("3_st4y8")

[node name="Camera3D" type="Camera3D" parent="CameraController"]
fov = 100.0
size = 0.25

[node name="ReflectionProbe" type="ReflectionProbe" parent="CameraController/Camera3D"]
update_mode = 1

[node name="WeaponController" type="Node3D" parent="CameraController/Camera3D"]

[node name="hands" parent="CameraController/Camera3D/WeaponController" instance=ExtResource("4_d0gre")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, -0.166137)

[node name="Components" type="Node" parent="."]

[node name="MouseCapture" type="Node" parent="Components"]
script = ExtResource("5_3s0e8")
debug = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_t6fw5")
}

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("SphereShape3D_ca8e7")
target_position = Vector3(0, 0.5, 0)
debug_shape_custom_color = Color(0.873045, 0.859795, 0, 1)

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Reticle" type="CenterContainer" parent="UserInterface" node_paths=PackedStringArray("RETICLE_LINES", "PLAYER_CONTROLLER")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_d4080")
RETICLE_LINES = [NodePath("Top"), NodePath("Right"), NodePath("Bottom"), NodePath("Left")]
PLAYER_CONTROLLER = NodePath("../..")

[node name="Top" type="Line2D" parent="UserInterface/Reticle"]
points = PackedVector2Array(0, -5, 0, -15)
width = 2.0

[node name="Right" type="Line2D" parent="UserInterface/Reticle"]
points = PackedVector2Array(5, 0, 15, 0)
width = 2.0

[node name="Bottom" type="Line2D" parent="UserInterface/Reticle"]
points = PackedVector2Array(0, 5, 0, 15)
width = 2.0

[node name="Left" type="Line2D" parent="UserInterface/Reticle"]
points = PackedVector2Array(-5, 0, -15, 0)
width = 2.0

[node name="DebugPanel" type="PanelContainer" parent="UserInterface"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 50.0
theme = ExtResource("7_xno87")
script = ExtResource("8_x3riy")

[node name="MarginContainer" type="MarginContainer" parent="UserInterface/DebugPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UserInterface/DebugPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PlayerStateMachine" type="Node3D" parent="."]

[node name="IdlePlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("9_jwvuw")

[node name="WalkingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("10_nbh2x")

[node name="SprintingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("11_skw14")

[node name="CrouchingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("12_pgrel")

[node name="JumpingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("13_fdr06")

[node name="SlidingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("14_03s5g")

[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
